master
------

* Add cabot_alert_slack as default plugin
* Upgrade to Django 1.10
* Upgrade to Celery 4

Version 0.9.2
-------------

* Add /about endpoint
* Fix rota bug when ical had no timezone
* Add User Profile settings link to user dropdown

Version 0.9.1
-------------

* Update cabot-alert-twilio to 1.3.0 to work on django 1.10
* Fix Alert preferences form breaking on django 1.8
* Add `cabot` executable instead of using python manage.py (for e.g. migrating)

Version 0.9.0
-------------

* Upgrade to Django 1.9

Version 0.8.6
-------------

* Add first time setup page
* Remove create_cabot_superuser management command (redundant with first time setup)

Version 0.8.5
-------------

* More severe alerts should trigger even if a less severe alert was recently sent
* Update production.env.example email settings
* Convert environment vars to boolean nicely

> Note: You may have to update your settings if they contain invalid boolean values

Version 0.8.4
-------------

* Fix setup.py packaging
* Use whitenoise to serve static files

> Note: You may have to update your webserver settings for static files to work properly

Version 0.8.3
-------------

* BUG: Add missing context processor

Version 0.8.2
-------------

* Remove django-smtp-ssl dependency
* Build docker image from alpine
* Refactor docker-compose files
* Fix db_clean task failing on large results tables
* Wait for docker containers to start in docker-entrypoint.sh
* Update CABOT_PLUGINS_ENABLED to compatible plugin versions
* Automatically initialise database, assets and superuser on docker container start

Version 0.8.1
-------------

* Fix all workers running celery beat
* Update django-compressor to run on django 1.8
* Fix typo in url testcase
* Update wsgi.py to work with django 1.8

Version 0.8.0
-------------

* Upgraded to Django 1.8

Version 0.7.0
-------------

* Upgraded to Django 1.7

Version 0.6.0
-------------

* Versioning Introduced.